@@ -61,34 +61,34 @@ class TestCopies(unittest.TestCase):
                                                      optset="regdiff",
                                                      tsrand=10.0, keepopt=True, destpath=self.outpath,
                                                      use_test_seed=True, ncpu=ncpu)
-        # success_dic_disp =  pycs3.sim.run.multirun("copies", lc_copy_disp, utils.disp, kwargs_optim_disp,
-        #                                              optset="disp",
-        #                                              tsrand=10.0, keepopt=True, destpath=self.outpath,
-        #                                              use_test_seed=True)
+        success_dic_disp =  pycs3.sim.run.multirun("copies", lc_copy_disp, utils.disp, kwargs_optim_disp,
+                                                     optset="disp",
+                                                     tsrand=10.0, keepopt=True, destpath=self.outpath,
+                                                     use_test_seed=True)
         assert success_dic_spline['success'] is True
         assert success_dic_regdiff['success'] is True
-        # assert success_dic_disp['success'] is True
+        assert success_dic_disp['success'] is True
 
         dataresults = [
             pycs3.sim.run.collect(directory=os.path.join(self.outpath, "sims_copies_opt_regdiff"), plotcolour="red",
                                   name="Regression difference technique"),
             pycs3.sim.run.collect(directory=os.path.join(self.outpath, "sims_copies_opt_spl"), plotcolour="blue",
                                   name="Free-knot spline technique"),
-            # pycs3.sim.run.collect(directory=os.path.join(self.outpath, "sims_copies_opt_disp"), plotcolour="green",
-            #                       name="Dispersion-like technique"),
+            pycs3.sim.run.collect(directory=os.path.join(self.outpath, "sims_copies_opt_disp"), plotcolour="green",
+                                  name="Dispersion-like technique"),
         ]
         result_dic_regdiff = dataresults[0].get_delays_from_ts()
         result_dic_spline = dataresults[1].get_delays_from_ts()
-        # result_dic_disp = dataresults[2].get_delays_from_ts()
+        result_dic_disp = dataresults[2].get_delays_from_ts()
         print("Spline : ", result_dic_spline)
         print("Regdiff : ", result_dic_regdiff)
-        # print("Disp : ", result_dic_disp)
+        print("Disp : ", result_dic_disp)
 
         result_th_center_spline = np.asarray([-5.277040592115382, -21.46321581986174, -69.4705103261964, -16.157084811163116, -64.58223959717778, -47.7311641573173])
         result_th_center_regdiff = np.asarray([-4.330783742618957, -20.853803332725075, -70.47692722707262, -16.585762660900606, -66.12541444597821, -49.69037247953041])
         result_th_center_disp = np.asarray([-5.654677825138508, -22.427181084944905, -69.07368943801299, -16.772529550463144, -63.41903790353123, -46.646508353068086])
         assert_allclose(result_dic_spline['center'], result_th_center_spline, atol=1.)
-        # assert_allclose(result_dic_disp['center'], result_th_center_disp, atol=0.5)
+        assert_allclose(result_dic_disp['center'], result_th_center_disp, atol=0.5)
         assert_allclose(result_dic_regdiff['center'], result_th_center_regdiff, atol=1.)
         pycs3.sim.plot.hists(dataresults, r=5.0, nbins=100, showqs=False,
                              filename=os.path.join(self.outpath, "fig_intrinsicvariance.png"), dataout=True,outdir=self.outpath)
